updated ProductsServiceTest with documentation